fix: restrict overflow to vertical

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,7 @@ body {
 
   color: $color-light;
   background: $color-dark;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
